# pytorch_geometric_temporal

./: pyproject.toml
torch_geometric_temporal/dataset/: __init__.py  chickenpox.py  encovid.py  metr_la.py  montevideo_bus.py  mtm.py  pedalme.py  pems_bay.py  sz_taxi.py  twitter_tennis.py  wikimath.py  windmilllarge.py  windmillmedium.py  windmillsmall.py
torch_geometric_temporal/nn/attention/: stgcn.py  tsagcn.py
torch_geometric_temporal/nn/recurrent/: temporalgcn.py
