[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_geometric_temporal"
version = "0.54.1"
authors = [
  { name="Benedek Rozemberczki", email="benedek.rozemberczki@gmail.com" },
  { name="Adyson Maia", email="adyson.maia@gmail.com" },
]
description = "A Temporal Extension Library for PyTorch Geometric."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9"
]
keywords = [
    "machine-learning",
    "deep-learning",
    "deeplearning",
    "deep learning",
    "machine learning",
    "signal processing",
    "temporal signal",
    "graph",
    "dynamic graph",
    "embedding",
    "dynamic embedding",
    "graph convolution",
    "gcn",
    "graph neural network",
    "graph attention",
    "lstm",
    "temporal network",
    "representation learning",
    "learning"
]
dependencies = [
    "decorator==4.4.2",
    "torch>=1.10",
    "cython",
    "pandas<=1.3.5",
    "torch_sparse",
    "torch_scatter",
    "torch_geometric",
    "numpy",
    "networkx"
]

[project.optional-dependencies]
test = [
    "pytest", 
    "pytest-cov", 
    "mock", 
    "networkx", 
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/adysonmaia/pytorch_geometric_temporal"

[tool.setuptools.packages.find]
include = ['torch_geometric_temporal*']